# OmniVote

./: .env.example  .gitconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  api_specification.md  architecture.md  design_language.md  docker-compose.yml  engineering_handbook.md  replace_auth.py
apps/api/: .env.example  .pylintrc  Dockerfile  Dockerfile.backend  README.md  alembic.ini  check_owners.py  delete_all.py  pyproject.toml  requirements.txt  run_seed.py  seed_owner.py  test.ps1  test.sh  test_api_create_org.py  test_create_org.py  test_script.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2dc2d1ed5d96_add_more_info_requested_to_verification_.py  4862091312e5_organization_foundation.py  609325742bca_election_engine_ui_fields.py  616b7b23d308_add_platform_identity_and_invitations.py  678e78566eb4_add_election_domain_models.py  6f8bacc33dda_add_rbac_models.py  8c43e8913b56_add_membership_platform_models.py  91a926c78489_add_platform_notifications.py  9237f4f28ee3_add_platform_settings.py  ab6826970a56_election_engine_foundation.py  b06526941208_initial_schema.py  b5878e978a88_add_identity_platform_models.py  b80122e84822_partial_unique_index_for_org_slug.py  baf378ddf0aa_add_voting_paused_to_electionstatus.py  bcbaa7685117_separate_verification_status.py  dc9032f56abc_add_tokens.py  fc334f5264cb_add_invitation_model.py
apps/api/app/: factory.py  main.py
apps/api/app/cache/: keys.py  redis.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/database/: __init__.py  base.py  engine.py  health.py  mixins.py  session.py  types.py
apps/api/app/exceptions/: exceptions.py  handlers.py
apps/api/app/middleware/: request_context.py
apps/api/app/models/: __init__.py  notification.py  organization.py  platform_settings.py
apps/api/app/repositories/: organization_repository.py
apps/api/app/schemas/: audit.py  organization.py  platform_identity.py  platform_notification.py  platform_organization.py  platform_settings.py  platform_statistics.py
apps/api/app/services/: email_service.py  notification_dispatcher.py  organization_service.py  platform_identity_service.py  platform_notification_service.py  platform_organization_service.py  platform_settings_service.py  platform_statistics_service.py  secret_manager.py
apps/api/app/tests/: conftest.py  test_background.py  test_database.py  test_health.py
apps/api/app/utils/: time.py  uuid.py
apps/api/app/workers/: settings.py  worker.py
apps/api/scripts/: bootstrap_platform.py  remove_user_manage_from_admin.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_elections.py  test_health.py  test_memberships.py  test_organizations.py  test_rbac.py  test_role_management.py  test_support.py
apps/api/tests/factories/: factories.py
apps/api/tests/fixtures/: auth_fixtures.py
apps/api/tests/identity/: test_auth.py  test_sessions.py
apps/api/tests/unit/: test_background.py  test_database.py  test_fixtures.py  (+4 more)
(+297 files in other folders)
