[tool.poetry]
name = "omnivote-api"
version = "0.2.3-alpha"
description = "FastAPI Backend for OmniVote SaaS platform"
authors = ["VeroSeven <engineering@veroseven.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.18"
fastapi-mail = "^1.4.1"
pydantic-settings = "^2.3.0"
redis = "^5.0.0"
arq = "^0.26.0"
celery = "^5.4.0"
structlog = "^24.1.0"
argon2-cffi = "^23.1.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
black = "^24.4.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E4",   # pycodestyle errors
    "E7",   
    "E9",   
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax suggestions)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
]
ignore = ["B008"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
